--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css')}}">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>ZackDash</h1>
+    <h2>Login</h2>
     <form>
         <input type="text" name="username" id="username-input" placeholder="username">
         <input type="password" name="password" id="password-input" placeholder="password">
+        <input type="submit" name="submit" id="submit-button">
     </form>
 </body>
 </html>
