(WIP) added js login

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,10 +9,13 @@
 <body>
     <h1>ZackDash</h1>
     <h2>Login</h2>
-    <form>
+    <form id="form">
         <input type="text" name="username" id="username-input" placeholder="username">
         <input type="password" name="password" id="password-input" placeholder="password">
         <input type="submit" name="submit" id="submit-button">
     </form>
+    <p id="errorMessage"></p>
+
+    <script src="{{ url_for('static', filename='scripts/login.js')}}"></script>
 </body>
 </html>
