--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -51,3 +51,14 @@ form input[type=submit]:active {
     border: 0 transparent solid;
     border-radius: 20px;
 }
+
+#errorMessage {
+    color: #c32323;
+    border: 3px #d14343 solid;
+    background-color: rgba(255, 0, 0, 0.3);
+    padding: 1em;
+    width: fit-content;
+    max-width: 50%;
+    margin: 2em auto;
+    display: none;
+}
