--- a/static/styles/signup.css
+++ b/static/styles/signup.css
@@ -62,3 +62,10 @@ form input[type=submit]:active {
     margin: 2em auto;
     display: none;
 }
+
+#login {
+    text-decoration: underline;
+    color: black;
+    font-size: 1.5em;
+    font-weight: bold;
+}
