--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,6 +13,7 @@
         <input type="text" name="username" id="username-input" placeholder="username">
         <input type="password" name="password" id="password-input" placeholder="password">
         <input type="password" name="confirm-password" id="confirm-password-input" placeholder="confirm password">
+        <a id="login" href="/login">Login.</a>
         <input type="submit" name="submit" id="submit-button">
     </form>
     <p id="errorMessage"></p>
