added signup button in login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,7 @@
     <form id="form">
         <input type="text" name="username" id="username-input" placeholder="username">
         <input type="password" name="password" id="password-input" placeholder="password">
+        <a id="signup" href="/signup">Signup.</a>
         <input type="submit" name="submit" id="submit-button">
     </form>
     <p id="errorMessage"></p>
