--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -60,5 +60,17 @@ form input[type=submit]:active {
     width: fit-content;
     max-width: 50%;
     margin: 2em auto;
-    display: none;
+    display: none;#login {
+    text-decoration: underline;
+    color: black;
+    font-size: 1.5em;
+    font-weight: bold;
+    }
+}
+
+#signup {
+    text-decoration: underline;
+    color: black;
+    font-size: 1.5em;
+    font-weight: bold;
 }
