--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/circular-graphics.css')}}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css')}}">
   <title>Main</title>
 </head>
 
@@ -18,6 +19,7 @@
     </div>
 
   <script src="{{ url_for('static', filename='scripts/circular_graphics.js')}}"></script>
+  <script src="{{ url_for('static', filename='scripts/main.js')}}"></script>
 
 </body>
 
